2025-01-28-advanced-cluster-security/payments-policies/visa-processor-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: visa-processor-netpol
  namespace: payments
spec:
  podSelector:
    matchLabels:
      app: visa-processor
  policyTypes:
  - Ingress
  - Egress
